loopfor.LoopFor.scala.error
Erreur de compilation :
LoopFor:1: error: Missing closing brace `}' assumed here
for (nbPas <- 0 to 6 ; nb <- 0 to nbPas ) {
^LoopFor:4: error: illegal start of simple expression
for (nbPas <- 0 to 6 ; nb <- 0 to nbPas ) {
^