loopfor.LoopFor.scala.code
for (nbPas <- 0 to 6 ; nb <- 0 to nbPas ) {
  avance()
  } prendBiscuit
for (nbPas <- 0 to 6 ; nb <- 0 to nbPas ) {
  recule()
			

